--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,14 +13,8 @@ main:
 
   - title: "Talks"
     url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "Misc."
     url: /year-archive/
     
   - title: "CV"
@@ -28,6 +22,3 @@ main:
     
   # - title: "CV"
   #   url: /cv-json/
-    
-  - title: "Guide"
-    url: /markdown/
