--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
   - title: "Talks"
     url: /talks/    
         
-  - title: "Misc."
+  - title: "Others"
     url: /year-archive/
     
   - title: "CV"
